Fix typo in BlobStorage README

--- a/BlobStorage/README
+++ b/BlobStorage/README
@@ -4,7 +4,7 @@ Instructions on how to use the connector:
 1. Deploy the template in Azure with "Deploy a custom template" option in Azure
 2. Click edit template and configure the following:
   - Starting from line 171, define the columns of the data stored in BlobStorage
-  - Line 203, configure transformKql line if you need any additoinal transformation with the data
+  - Line 203, configure transformKql line if you need any additional transformation with the data
   - Starting from line 220, define the table schema of that custom table where data will be stored
 3. Define the parameters:
   - Select subscription, RG and region where you want to deploy the connector
